main nav now click/touch toggleable, but no longer works by just hovering; added darker orange for mobile nav link contrast a11y support

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -2,6 +2,7 @@
   --white: hsl(0deg 0% 98%);
   --grey: hsl(0deg 0% 30%);
   --orange: hsl(30deg 100% 40%);
+  --dark-orange: hsl(30deg 100% 35%);
   --blue: hsl(195deg 50% 35%);
   --purple: hsl(271deg 68% 32%);
   --light-blue: hsl(195deg 50% 45%);
